--- a/install.html
+++ b/install.html
@@ -15,7 +15,7 @@
                     code: btoa(
                         [
                             'const script = document.createElement("script");',
-                            'script.src = "https://shinymaskr.ga/ShinyColors.user.js";',
+                            'script.src = "https://newbiepr.github.io/Temporary_KRTL/ShinyColors.user.js";',
                             "document.head.appendChild(script);"
                         ].join("\n")
                     ),
