--- a/install.html
+++ b/install.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>샤니마스 IOS 한글패치</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <script>
-        function Base64() {
-            _keyStr = "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
-            this.encode = function (input) {
-                var output = "";
-                var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
-                var i = 0;
-                input = utf8_encode(input);
-                while (i < input.length) {
-                    chr1 = input.charCodeAt(i++);
-                    chr2 = input.charCodeAt(i++);
-                    chr3 = input.charCodeAt(i++);
-                    enc1 = chr1 >> 2;
-                    enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
-                    enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
-                    enc4 = chr3 & 63;
-                    if (isNaN(chr2)) {
-                        enc3 = enc4 = 64;
-                    } else if (isNaN(chr3)) {
-                        enc4 = 64;
-                    }
-                    output = output + _keyStr.charAt(enc1) + _keyStr.charAt(enc2) + _keyStr.charAt(enc3) + _keyStr.charAt(enc4);
-                }
-                return output;
+      function Base64() {
+        _keyStr =
+          "ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=";
+        this.encode = function (input) {
+          var output = "";
+          var chr1, chr2, chr3, enc1, enc2, enc3, enc4;
+          var i = 0;
+          input = utf8_encode(input);
+          while (i < input.length) {
+            chr1 = input.charCodeAt(i++);
+            chr2 = input.charCodeAt(i++);
+            chr3 = input.charCodeAt(i++);
+            enc1 = chr1 >> 2;
+            enc2 = ((chr1 & 3) << 4) | (chr2 >> 4);
+            enc3 = ((chr2 & 15) << 2) | (chr3 >> 6);
+            enc4 = chr3 & 63;
+            if (isNaN(chr2)) {
+              enc3 = enc4 = 64;
+            } else if (isNaN(chr3)) {
+              enc4 = 64;
             }
-            utf8_encode = function(_string) {
-                return _string.replace(/([\u2E80-\u2EFF\u2F00-\u2FDF\u3000-\u303F\u31C0-\u31EF\u3200-\u32FF\u3300-\u33FF\u3400-\u4DBF\u4DC0-\u4DFF\u4E00-\u9FBF\uF900-\uFAFF\uFE30-\uFE4F\uFF00-\uFFEF])/g, str => {
-                    return '\\u' + str.charCodeAt(0).toString(16)
-                })
+            output =
+              output +
+              _keyStr.charAt(enc1) +
+              _keyStr.charAt(enc2) +
+              _keyStr.charAt(enc3) +
+              _keyStr.charAt(enc4);
+          }
+          return output;
+        };
+        utf8_encode = function (_string) {
+          return _string.replace(
+            /([\u2E80-\u2EFF\u2F00-\u2FDF\u3000-\u303F\u31C0-\u31EF\u3200-\u32FF\u3300-\u33FF\u3400-\u4DBF\u4DC0-\u4DFF\u4E00-\u9FBF\uF900-\uFAFF\uFE30-\uFE4F\uFF00-\uFFEF])/g,
+            (str) => {
+              return "\\u" + str.charCodeAt(0).toString(16);
             }
-        }
-        function addonApp() {
-
-            var base64 = new Base64();
-            var codeStr = base64.encode(
-`(function () {
+          );
+        };
+      }
+      function addonApp() {
+        var base64 = new Base64();
+        var codeStr = base64.encode(
+          `(function () {
   let scriptContent = '';
   let version = '';
   const script = document.createElement('script');
@@ -68,33 +75,31 @@
       }
     })
 })();`
-            );
-            var appJson = {
-                author: "newbie(source:biuuu)",
-                code: codeStr,
-                id: "1",
-                runat : 1,
-                version : "0.3",
-                name: "Shinycolors Korean",
-                url: "shinycolors.enza.fun/*",
-            };
-            var appStr = JSON.stringify(appJson);
-            var addon_result = base64.encode(appStr);
-            try {
-                window.via.addon(addon_result);
-            } catch (error) {
-                console.log(error);
-            }
+        );
+        var appJson = {
+          author: "newbie(source:biuuu)",
+          code: codeStr,
+          id: "1",
+          runat: 1,
+          version: "0.3",
+          name: "Shinycolors Korean",
+          url: "shinycolors.enza.fun/*",
+        };
+        var appStr = JSON.stringify(appJson);
+        var addon_result = base64.encode(appStr);
+        try {
+          window.via.addon(addon_result);
+        } catch (error) {
+          console.log(error);
         }
+      }
 
-
-        if (window.via && typeof window.via.addon === "function") {
-            addonApp();
-        } else {
-            alert('IOS 기기에서 alook 브라우저로 접속해주시길 바랍니다.')
-        }
+      if (window.via && typeof window.via.addon === "function") {
+        addonApp();
+      } else {
+        alert("IOS 기기에서 alook 브라우저로 접속해주시길 바랍니다.");
+      }
     </script>
     <a href="https://shinycolors.enza.fun/">샤니마스 게임 사이트 바로가기</a>
-</body>
-
+  </body>
 </html>
